fix: add RuleRecipeGroupCheckBlue